# hermes-webui

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  Dockerfile  MAINTAINING.md  README.en.md  README.md  ROADMAP.md  SPRINTS.md  TESTING.md  THEMES.md  bootstrap.py  ctl.sh  docker-compose.three-container.yml  docker-compose.two-container.yml  docker_init.bash  eslint.runtime-guard.config.mjs  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  start.ps1  start.sh
api/: agent_health.py  agent_sessions.py  auth.py  auth_oidc.py  background_process.py  clarify.py  commands.py  compression_anchor.py  compression_recovery.py  config.py  crash_visibility.py  dashboard_probe.py  extensions.py  gateway_chat.py  gateway_restart.py  gateway_watcher.py  helpers.py  kanban_bridge.py  models.py  oauth.py  office_documents.py  onboarding.py  passkeys.py  paths.py  plugin_providers.py  plugins.py  profiles.py  providers.py  request_diagnostics.py  rollback.py  route_approvals.py  route_session_list_cache.py  routes.py  run_journal.py  runner_client.py  session_discoverability.py  session_events.py  session_export_html.py  session_lifecycle.py  session_ops.py  (+15 more)
docs/: CONTRACTS.md  EXTENSIONS.md  UIUX-GUIDE.md  advanced-chat-setup.md  docker.md  onboarding.md  remote-access.md  supervisor.md  troubleshooting.md  workspace-git.md
scripts/: ruff_lint.py  scope_undef_gate.py  test.sh
static/: assistant_turn_anchors.js  boot.js  commands.js  extension_settings.js  i18n.js  icons.js  index.html  login.js  messages.js  onboarding.js  outline.js  panels.js  sessions.js  share.html  share.js  style.css  sw.js  terminal.js  ui.js  workspace.js
tests/: _layout_helpers.py  _wakeup_helpers.py  browser_smoke.py  conftest.py  helpers.py  js_source_extract.py  test_1003_preferences_autosave.py  test_1062_busy_input_modes.py  test_1325_user_fenced_code.py  test_1432_newchat_and_1423_profile_input.py  test_1466_sidebar_cancel_clarify.py  test_1694_root_saved_running_policy.py  test_1694_terminal_cleanup_ownership.py  test_1707_workspace_filename_click.py  test_2558_reveal_path_translation.py  test_2735_open_in_vscode.py  test_2791_model_picker_keyboard_nav.py  test_3007_approval_card_collapse.py  test_3230_preserve_manual_session_title.py  test_3845_keyboard_session_nav.py  test_3850_settings_search.py  test_3866_project_context_memory_section.py  test_4167_sidebar_payload_and_scope.py  test_4170_offline_probe.py  test_4413_seed_provider_models.py  test_4504_clarify_stuck_on_expiry.py  test_465_session_branching.py  test_4676_project_new_session_shortcuts.py  test_4737_first_tab_model_catalog_refresh.py  test_4961_url_query_prefill.py  test_499_tts_playback.py  test_5001_active_profile_recovery.py  test_5021_boot_model_redirect_budget.py  test_5144_busy_composer_placeholder_hint.py  test_5145_steer_default.py  test_5148_settings_search_busy_input_terms.py  (+844 more)
(+21 files in other folders)
